disabled Style/NumericLiterals
Signed-off-by: Steven Hoffman <shoffman@valenciamgmt.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,3 +12,6 @@ Layout/MultilineMethodCallIndentation:
 
 Layout/MultilineMethodCallBraceLayout:
   EnforcedStyle: new_line
+
+Style/NumericLiterals:
+  Enabled: false
