--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,10 @@
 AllCops:
   TargetRubyVersion: 2.5
 
-Layout/IndentArray:
+Layout/IndentFirstArrayElement:
   EnforcedStyle: consistent
 
-Layout/IndentHash:
+Layout/IndentFirstHashElement:
   EnforcedStyle: consistent
 
 Layout/MultilineMethodCallIndentation:
