--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,11 @@
 AllCops:
+  NewCops: enable
   TargetRubyVersion: 2.5
 
-Layout/IndentFirstArrayElement:
+Layout/FirstArrayElementIndentation:
   EnforcedStyle: consistent
 
-Layout/IndentFirstHashElement:
+Layout/FirstHashElementIndentation:
   EnforcedStyle: consistent
 
 Layout/MultilineMethodCallIndentation:
@@ -12,6 +13,15 @@ Layout/MultilineMethodCallIndentation:
 
 Layout/MultilineMethodCallBraceLayout:
   EnforcedStyle: new_line
+
+# Rubocop defaults to 120 now - that's a bit too wide for me.
+Layout/LineLength:
+  Max: 100
+
+# Disabled cops
+
+Style/Documentation:
+  Enabled: false
 
 Style/NumericLiterals:
   Enabled: false
