detect a few old team names
Signed-off-by: Steven Hoffman <git@fustrate.com>

--- a/config/team_names.yml
+++ b/config/team_names.yml
@@ -7,6 +7,7 @@
   - ana
   - laaa
   - laa
+  - cal
 109:
   - arizona diamondbacks
   - diamondbacks
@@ -72,6 +73,8 @@
   - dodgers
   - lad
   - la
+  - bkn
+  - brooklyn
 120:
   - washington nationals
   - nationals
@@ -81,6 +84,9 @@
   - dc
   - natinals
   - nats
+  - mtl
+  - montreal
+  - expos
 121:
   - new york mets
   - mets
